--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1677,7 +1677,17 @@
 						}
 					}
 				}
-			}			
+			}	
+
+			try
+			{
+				
+			}
+			catch (Exception ex)
+			{
+				global::BaseDatos.Errores.Insertar.Mensaje("test", ex);
+			}
+
 		}
 	}
 
