--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -267,6 +267,10 @@
 }
 
 <style>
+	.noticia-ancho {
+		width: calc(33% - 16px);
+	}
+
 	.noticia-enlaces {
 		flex-direction: row;
 		gap: 80px;
@@ -276,6 +280,10 @@
 		.noticia-enlaces {
 			flex-direction: column;
 			gap: 30px;
+		}
+
+		.noticia-ancho {
+			width: calc(50% - 16px);
 		}
 	}
 </style>
