--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -693,33 +693,36 @@
 		{
 			if (deckAPI.Datos != null)
 			{
-				juego.Deck = (JuegoDeck)deckAPI.Datos.Resultado;
-				juego.DeckComprobacion = DateTime.Now;
-
-				if (deckAPI.Datos.Tokens != null)
+				if (deckAPI.Datos.Resultado != null)
 				{
-					if (deckAPI.Datos.Tokens.Count > 0)
+					juego.Deck = (JuegoDeck)int.Parse(deckAPI.Datos.Resultado.ToString());
+					juego.DeckComprobacion = DateTime.Now;
+
+					if (deckAPI.Datos.Tokens != null)
 					{
-						List<JuegoDeckToken> tokens = new List<JuegoDeckToken>();
-
-						foreach (var token in deckAPI.Datos.Tokens)
+						if (deckAPI.Datos.Tokens.Count > 0)
 						{
-							if (string.IsNullOrEmpty(token.Token) == false)
+							List<JuegoDeckToken> tokens = new List<JuegoDeckToken>();
+
+							foreach (var token in deckAPI.Datos.Tokens)
 							{
-								JuegoDeckToken nuevoToken = new JuegoDeckToken();
-								nuevoToken.Tipo = token.Tipo;
-								nuevoToken.Mensaje = token.Token;
+								if (string.IsNullOrEmpty(token.Token) == false)
+								{
+									JuegoDeckToken nuevoToken = new JuegoDeckToken();
+									nuevoToken.Tipo = int.Parse(token.Tipo.ToString());
+									nuevoToken.Mensaje = token.Token;
 
-								tokens.Add(nuevoToken);
+									tokens.Add(nuevoToken);
+								}
 							}
+
+							juego.DeckTokens = tokens;
 						}
-
-						juego.DeckTokens = tokens;
 					}
-				}
 
-				vacio = false;
-				global::BaseDatos.Juegos.Actualizar.Deck(juego);
+					vacio = false;
+					global::BaseDatos.Juegos.Actualizar.Deck(juego);
+				}
 			}
 		}
 
