--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -72,7 +72,7 @@
 				</h1>
 
 				<div style="display: flex; align-items: center; font-size: 15px; margin-top: 20px; gap: 30px;">
-					<div>@Herramientas.Idiomas.CogerCadena(idioma, "News.String6") @Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)</div>
+					<div>@Herramientas.Idiomas.CogerCadena(idioma, "String9", "News") @Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)</div>
 
 					@{
 						string fechaTermina = string.Empty;
